--- a/mulam/vishnu-puranam/vishnu-puranam-ramayanam.tex
+++ b/mulam/vishnu-puranam/vishnu-puranam-ramayanam.tex
@@ -1,12 +1,11 @@
-
+\begin{flushleft}
 \uvacha{श्रीपराशर उवाच}
 
 काश्यपदुहिता मुमतिर्विदर्भराजतनया केशिनी च द्वे भार्ये सगरस्यास्ताम्॥१॥
 
 ताभ्यां चापत्यार्थमौर्वः परमेण समाधिनाराधितो वरमदात्॥२॥
 
-एका वंशकरमेकं पुत्रमपरा षष्टिं पुत्रसहस्राणां जनयिष्यतीति यस्या यदभिमतं तदिच्छया
-गृह्यतामित्युक्ते केशिन्येकं वरयामास॥३॥
+एका वंशकरमेकं पुत्रमपरा षष्टिं पुत्रसहस्राणां जनयिष्यतीति यस्या यदभिमतं तदिच्छया गृह्यतामित्युक्ते केशिन्येकं वरयामास॥३॥
 
 सुमतिः पुत्रसहस्राणि षष्टिं वव्रे॥४॥
 
@@ -24,15 +23,13 @@
 
 तान्यपि षष्टिः पुत्रसहस्राण्यसमञ्जसचारितमेवानुचक्रुः॥११॥
 
-ततश्चाससमजसचरितानुकारिभिः सागरैरपध्वस्तयज्ञैः सन्मार्गे जगति
-देवाःसकलविद्यामयमसंस्पृष्टमशेषदोषैर्भगवतः पुरुषोत्तमस्यांशभूत कपिलं प्रणम्य तदर्थमूचुः॥१२॥
+ततश्चाससमजसचरितानुकारिभिः सागरैरपध्वस्तयज्ञैः सन्मार्गे जगति देवाःसकलविद्यामयमसंस्पृष्टमशेषदोषैर्भगवतः पुरुषोत्तमस्यांशभूत कपिलं प्रणम्य तदर्थमूचुः॥१२॥
 
 भगवन्नेभिः सगरतनयैरसमञ्जसचरितमनुगम्यते॥१३॥
 
 कथमेभिर् असद्वृत्तमनुसरद्भिर्जगद्भविष्यतीति॥१४॥
 
-अत्यार्त जगत्परित्राणाय च भगवतोत्र शरीरग्रहणमित्याकर्ण्य भगवानाहाल्पैरेव
-दिनैर्विनङ्क्ष्यन्तीति॥१५॥
+अत्यार्त जगत्परित्राणाय च भगवतोत्र शरीरग्रहणमित्याकर्ण्य भगवानाहाल्पैरेव दिनैर्विनङ्क्ष्यन्तीति॥१५॥
 
 अत्रान्तरे च सगरो हयमेधमारभत॥१६॥
 
@@ -42,27 +39,21 @@
 
 पाताले चाश्वं परिभ्रमन्तं तमवनीपतितनयास्ते ददृशुः॥१९॥
 
-नातिदूरेऽवस्थितं च भगवन्तमपघने शरत्कालेर्कमिव तेजोभिरवनतमूर्धमधश्चाशेषदिशश्चोद्भासयमानं
-हयहर्तारं कपिलर्षिमपश्यन्॥२०॥
+नातिदूरेऽवस्थितं च भगवन्तमपघने शरत्कालेर्कमिव तेजोभिरवनतमूर्धमधश्चाशेषदिशश्चोद्भासयमानं हयहर्तारं कपिलर्षिमपश्यन्॥२०॥
 
-ततश्चोद्यतायुधा दुरात्मानोऽयमस्मदपकारी यज्ञविध्नकारी हन्यतां हयहर्ता
-हन्यतामीत्यवोच्न्नभ्यधावंश्च॥२१॥
+ततश्चोद्यतायुधा दुरात्मानोऽयमस्मदपकारी यज्ञविध्नकारी हन्यतां हयहर्ता हन्यतामीत्यवोच्न्नभ्यधावंश्च॥२१॥
 
-ततस्तेनापि भगवता किञ्चिदीषत्परिवर्तितलोचनेनावलोकिताःस्वशरीरसमुत्थेनाग्निनादह्यमाना
-विनेशुः॥२२॥
+ततस्तेनापि भगवता किञ्चिदीषत्परिवर्तितलोचनेनावलोकिताःस्वशरीरसमुत्थेनाग्निनादह्यमाना विनेशुः॥२२॥
 
-सगरोप्यवगम्याश्वानुसारि तत्पुत्रबलमशेषं परमर्षिणा कपिलेन तेजसा दग्धं
-ततोंशुमन्तमसमञ्जसपुत्रमश्वानयनाययुयोज॥२३॥
+सगरोप्यवगम्याश्वानुसारि तत्पुत्रबलमशेषं परमर्षिणा कपिलेन तेजसा दग्धं ततोंऽशुमन्तमसमञ्जसपुत्रमश्वानयनाययुयोज॥२३॥
 
 स तु सगरकतयखातमार्गेण कपिलमुपगम्य भक्तिनम्रस्तदा तृष्टाव॥२४॥
 
 अथैनं भगवानाह॥२५॥
 
-गच्छैनं पितामहायाश्वं प्रापय वरं वृणीष्व च पुत्रक पौत्राश्च चते स्वर्गाद्गङ्गां भुवमानेष्यन्त
-इति॥२६॥
+गच्छैनं पितामहायाश्वं प्रापय वरं वृणीष्व च पुत्रक पौत्राश्च चते स्वर्गाद्गङ्गां भुवमानेष्यन्त इति॥२६॥
 
-अथांशुमानपि स्वर्यातानां ब्रह्मदण्डहतानामस्मत्पितॄणामस्वर्गयोग्यानां स्वर्गप्राप्तिकरं
-वरमस्माकं प्रयच्छेति प्रत्याह॥२७॥
+अथांशुमानपि स्वर्यातानां ब्रह्मदण्डहतानामस्मत्पितॄणामस्वर्गयोग्यानां स्वर्गप्राप्तिकरं वरमस्माकं प्रयच्छेति प्रत्याह॥२७॥
 
 तदाकर्ण्य तं च भगवानाह उक्तमेवैतन्मयाद्य पौत्रस्ते त्रिदिवाद्गङ्गाम्भुवमानयिष्यतीति॥२८॥
 
@@ -70,9 +61,7 @@
 
 भगवद्विष्णुपादाङ्गुष्ठनिर्गतस्य हि जलस्यैतन्माहात्म्यम्॥३०॥
 
-यन्न केवलमभिसन्धिपूर्वकं स्नानाद्युपभोगेषूपकारकमनभिसान्धितमप्यस्यां
-प्रेतप्राणस्यास्थिचर्मस्नायुकेशाद्युपस्पृष्टं शरीरजमपि पतितं सद्यः शरीरिणं स्वर्गं नयतीत्युक्तः
-प्रणम्य भवगतेऽश्वमादाय पितामहायज्ञमाजगाम्॥३१॥
+यन्न केवलमभिसन्धिपूर्वकं स्नानाद्युपभोगेषूपकारकमनभिसान्धितमप्यस्यां प्रेतप्राणस्यास्थिचर्मस्नायुकेशाद्युपस्पृष्टं शरीरजमपि पतितं सद्यः शरीरिणं स्वर्गं नयतीत्युक्तः प्रणम्य भवगतेऽश्वमादाय पितामहायज्ञमाजगाम्॥३१॥
 
 सगरोप्यश्वमासाद्य तं यज्ञं समापयामास॥३२॥
 
@@ -80,10 +69,9 @@
 
 तस्यांशुमतो दिलीपः पुत्रोभवत्॥३४॥
 
-दिलीपस्य भगीरथः योऽसौ गङ्गां स्वर्गादिहानीय भगीरथीसञ्ज्ञां चकार॥३५॥
+दिलीपस्य भगीरथः योऽसौ गङ्गां स्वर्गादिहानीय भगीरथीसंज्ञां चकार॥३५॥
 
-भगीरथात्सुहोत्रःसुहोत्राच्छुतः तस्यापि नाभागः ततोम्बरीषः तत्पुत्रःसिन्धुद्वीपः
-सिन्धुद्वीपादयुतायुः॥३६॥
+भगीरथात्सुहोत्रःसुहोत्राच्छुतः तस्यापि नाभागः ततोम्बरीषः तत्पुत्रःसिन्धुद्वीपः सिन्धुद्वीपादयुतायुः॥३६॥
 
 तत्पुत्रश्च ऋतुपर्णः योऽसौ नलसहायोक्षहृदयज्ञोभूत्॥३७॥
 
@@ -103,35 +91,29 @@
 
 कालेन गच्छता सौदासो यज्ञमयजत्॥४५॥
 
-परिनिष्ठितयज्ञे आचार्ये वसिष्ठे निष्क्रान्ते तद्रक्षो वसिष्ठरूपमास्थाय यज्ञावसाने मम
-नरमांसभोजनं देयमिति तत्संस्क्रियतां क्षणादागमिष्यामीत्युक्त्वा निष्क्रान्तः॥४६॥
+परिनिष्ठितयज्ञे आचार्ये वसिष्ठे निष्क्रान्ते तद्रक्षो वसिष्ठरूपमास्थाय यज्ञावसाने मम नरमांसभोजनं देयमिति तत्संस्क्रियतां क्षणादागमिष्यामीत्युक्त्वा निष्क्रान्तः॥४६॥
 
-भूयश्च सूदवेषं कृत्वा राजाज्ञया मानुषं मांसं संस्कृत्य राज्ञे न्यवेदयत्॥४७॥सावपि
-हिरण्यपात्रे मांसमादाय वसिष्ठागमनप्रतीक्षकोऽभवत्॥ ४८॥
+भूयश्च सूदवेषं कृत्वा राजाज्ञया मानुषं मांसं संस्कृत्य राज्ञे न्यवेदयत्॥४७॥
+
+सावपि हिरण्यपात्रे मांसमादाय वसिष्ठागमनप्रतीक्षकोऽभवत्॥४८॥
 
 आगताय वसिष्ठाय निवेदितवान्॥४९॥
 
-स चाप्यचिन्तयदहोस्य राज्ञो दौःशील्यं येनैतन्मांसमस्माकं प्रयच्छति किमेतद्द्रव्यजातमिति
-ध्यानपरोभवत्॥५०॥
+स चाप्यचिन्तयदहोस्य राज्ञो दौःशील्यं येनैतन्मांसमस्माकं प्रयच्छति किमेतद्द्रव्यजातमिति ध्यानपरोभवत्॥५०॥
 
 अपश्यच्च तन्मांसम्मानुषम्॥५१॥
 
 अतः क्रोधकलुषीकृतचेता राजनि सापमुत्ससर्ज॥५२॥
 
-यस्मादभोज्यमेतदस्मद्विधानां तपस्विनामवगच्छन्नपि वान्मह्यं ददाति तस्मात्तवैवात्र लोलुपता
-भविष्यतीति॥५३॥
+यस्मादभोज्यमेतदस्मद्विधानां तपस्विनामवगच्छन्नपि वान्मह्यं ददाति तस्मात्तवैवात्र लोलुपता भविष्यतीति॥५३॥
 
 अनन्तरं च तेनापि भगवतैवाभिहितोस्मीत्युक्ते किं मयाभहितमिति मुनिः पुनरपि समाधौ तस्थौ॥५४॥
 
-समाधिविज्ञानविगतार्थश्चानुग्रहं तस्मै चकार नात्यन्तिकमेतद्द्वादशाब्दं तव भोजनं भविष्यतीति
-॥५५॥
+समाधिविज्ञानविगतार्थश्चानुग्रहं तस्मै चकार नात्यन्तिकमेतद्द्वादशाब्दं तव भोजनं भविष्यतीति॥५५॥
 
-असावपि प्रतिगृह्योदकाञ्जलिं मुनिशापप्रदानायोद्यतो भगवन्नयमस्मद्गुरुर्नार्हस्येनं
-कुलदेवताभूतमाचार्यं शप्तुमिति मदयन्त्या स्वपत्न्या प्रसादितःसस्याम्बुदरक्षणार्थं तच्छापांवु
-नोर्व्यां न चाकासे चिक्षेप किं तु तेनैव स्वपदौ सिषेच॥५६॥
+असावपि प्रतिगृह्योदकाञ्जलिं मुनिशापप्रदानायोद्यतो भगवन्नयमस्मद्गुरुर्नार्हस्येनं कुलदेवताभूतमाचार्यं शप्तुमिति मदयन्त्या स्वपत्न्या प्रसादितःसस्याम्बुदरक्षणार्थं तच्छापांवु नोर्व्यां न चाकासे चिक्षेप किं तु तेनैव स्वपदौ सिषेच॥५६॥
 
-तेन च क्वोधाश्रितेनां चबुना दग्धच्छायौ तत्पादौ कल्माषतामुपगतौ ततःस कल्माषपादसञ्ज्ञामवाप
-॥५७॥
+तेन च क्वोधाश्रितेनां चबुना दग्धच्छायौ तत्पादौ कल्माषतामुपगतौ ततःस कल्माषपादसंज्ञामवाप॥५७॥
 
 वसिष्ठशापाच्च षष्ठेषष्ठे काले राक्षसस्वभावमेत्या टव्यां पर्यटन्ननेकशो मानुषानभक्षयत्॥५८॥
 
@@ -143,13 +125,11 @@
 
 प्रसीदेक्ष्वाकुकुलतिलकभूतस्त्वं महाराजो मियत्रसहो न राक्षसः॥६२॥
 
-नार्हसि स्त्रीधर्मसुखाभिज्ञो मय्यकृतार्थायामस्मद्भर्तारं हन्तुमित्येवं बहुप्रकारं विलपन्त्यां
-व्याघ्रः पशुमिवारण्येऽभिमतं तं ब्राह्मणमभक्षयत्॥६३॥
+नार्हसि स्त्रीधर्मसुखाभिज्ञो मय्यकृतार्थायामस्मद्भर्तारं हन्तुमित्येवं बहुप्रकारं विलपन्त्यां व्याघ्रः पशुमिवारण्येऽभिमतं तं ब्राह्मणमभक्षयत्॥६३॥
 
 ततश्चातिकोपसमन्विता ब्राह्मणी तं राजानं शशाप॥६४॥
 
-यस्मादेवं मय्यतृषप्तायां त्वयायं मत्पतिर्भक्षितः तस्मात्त्वमपि कामोपभोगप्रवृत्तोन्तं
-प्राप्स्यसीति॥६५॥
+यस्मादेवं मय्यतृषप्तायां त्वयायं मत्पतिर्भक्षितः तस्मात्त्वमपि कामोपभोगप्रवृत्तोन्तं प्राप्स्यसीति॥६५॥
 
 शप्त्वा चैव साग्निं प्रविवेश॥६६॥
 
@@ -167,8 +147,7 @@
 
 अश्मस्य मूलको नाम पुत्रोऽभवत्॥७३॥
 
-योसौ निःक्षत्रे क्ष्मातलेस्मिन् क्रियमाणे स्त्रीभिर्विवस्त्रभिः परिवार्य रक्षितः ततस्तं
-नारीकवचमुदाहरन्ति॥७४॥
+योऽसौ निःक्षत्रे क्ष्मातलेस्मिन् क्रियमाणे स्त्रीभिर्विवस्त्रभिः परिवार्य रक्षितः ततस्तं नारीकवचमुदाहरन्ति॥७४॥
 
 मूलकाद्दशरथस्तस्मादिलिविलस्ततश्च विश्वसहः॥७५॥
 
@@ -178,20 +157,14 @@
 
 यद्यवश्यं वरो ग्राह्यः तन्ममायुः कथ्यतामिति॥७८॥
 
-अनन्तरं च तैरुक्तं मुहूर्तमेकं प्रमाणं तवायुरित्युक्तोथाःस्वलितगतिना विमानेन लघिमादिगुणो
-मर्त्यलोकमागम्येदमाह॥७९॥
+अनन्तरं च तैरुक्तं मुहूर्तमेकं प्रमाणं तवायुरित्युक्तोथाःस्वलितगतिना विमानेन लघिमादिगुणो मर्त्यलोकमागम्येदमाह॥७९॥
 
-यथा न ब्राह्मणेभ्यः सकाशादात्मापि मे प्रियतरः न च स्व धर्मोल्लङ्घनं मया
-कदटचिदप्यनुष्ठितं न च सकलदेवमानुषपशुपक्षिवृक्षादिकेष्वच्युतव्यतिरेकवती दृष्टिर्ममाभूत्तथा तमेवं
-मुनिजनानुस्मृतं भगवन्तमस्खलितगतिः प्रापयेयमित्यशेषदेवगुरौ भगवत्यनिर्देश्यवपुषि
-सत्तामात्रात्मन्यात्मानं परमात्मनि वासुदेवाख्ये युयोज तत्रैव च लयमवाप॥८०॥
+यथा न ब्राह्मणेभ्यः सकाशादात्मापि मे प्रियतरः न च स्व धर्मोल्लङ्घनं मया कदटचिदप्यनुष्ठितं न च सकलदेवमानुषपशुपक्षिवृक्षादिकेष्वच्युतव्यतिरेकवती दृष्टिर्ममाभूत्तथा तमेवं मुनिजनानुस्मृतं भगवन्तमस्खलितगतिः प्रापयेयमित्यशेषदेवगुरौ भगवत्यनिर्देश्यवपुषि सत्तामात्रात्मन्यात्मानं परमात्मनि वासुदेवाख्ये युयोज तत्रैव च लयमवाप॥८०॥
 
-अत्रापि श्रूयते श्लोको गीतःसप्तर्षिभिः पुरा ।
-
+अत्रापि श्रूयते श्लोको गीतःसप्तर्षिभिः पुरा।
 खट्वाङ्गेन समो नान्यः कश्चिदुर्व्यां भविष्यति॥८१॥
 
 येन स्वर्गादिहागम्य मुहूर्तं प्राप्य जीवितम् ।
-
 त्रयोतिसन्धिता लोका बुद्ध्या सत्येन चैव हि॥८२॥
 
 खट्वाङ्गाद्दीर्घबाहुः पुत्रोऽभवत्॥८३॥
@@ -223,54 +196,41 @@
 
 विराधखरदूषणादीन् कबन्धवालिनौ च निजघान॥९६॥
 
-बद्धा चाम्भोनिधिमशेषराक्षसकुलक्षयं कृत्वा दशाननापहृतां भार्यं
-तद्वधादपहृतकलङ्कामप्यनलप्रवेशशुद्धामशेषदेवसङ्घैः स्तूयमानशीलां जनकराजकन्यामयोध्यामानिन्ये॥९७॥
+बद्धा चाम्भोनिधिमशेषराक्षसकुलक्षयं कृत्वा दशाननापहृतां भार्यं तद्वधादपहृतकलङ्कामप्यनलप्रवेशशुद्धामशेषदेवसङ्घैः स्तूयमानशीलां जनकराजकन्यामयोध्यामानिन्ये॥९७॥
 
 ततश्चाभिषेकमङ्गलं मैत्रेय वर्षशतेनापि वक्तुं न शक्यते सङ्क्षेपेण श्रूयताम्॥९८॥
 
-लक्ष्मणभरतशत्रुघ्नविभीषणसुग्रीवाङ्गदजाम्बवद्धनुमत्प्रभृतिभिः समुत्फुल्लवदनैश्छत्रचामरादियुतैः
-सेव्यमानो दशरथिर्ब्रह्मेन्द्राग्निजरृतिवरुणवायुकुबेरेशानप्रभृतिभिः
-सर्वामरैर्वसिष्ठवामदेववाल्मीकिमार्कण्डेयविश्वामित्रभरद्वाजागस्तयप्रभृतिभिर्मुनिवरैः
-ऋग्यजुसामाथर्वैः संस्तूयमानो
-नृत्यगीतवाद्याद्यखिललोकमङ्गलवाद्यौर्वीणावेशुमृदङ्गभेरीपटहशङ्खकाहलगोमुखप्रभृतिभिः सुनादैः
-समस्तभूभटतां मध्ये सकललोकरक्षार्थं यथोचितमभिषिक्तो दाशरथिः कोसलेन्द्रो रघुकुलतिलको
-जानकीप्रियो भ्रातृत्रयप्रियःसिंहासनगत एकादसाब्दसहस्रं राज्यमकरोत्॥९९॥
+लक्ष्मणभरतशत्रुघ्नविभीषणसुग्रीवाङ्गदजाम्बवद्धनुमत्प्रभृतिभिः समुत्फुल्लवदनैश्छत्रचामरादियुतैः सेव्यमानो दशरथिर्ब्रह्मेन्द्राग्निजरृतिवरुणवायुकुबेरेशानप्रभृतिभिः सर्वामरैर्वसिष्ठ\-वामदेव\-वाल्मीकि\-मार्कण्डेय\-विश्वामित्र\-भरद्वाजागस्तय\-प्रभृतिभिर्मुनिवरैः ऋग्यजुसामाथर्वैः संस्तूयमानो नृत्यगीतवाद्याद्यखिललोकमङ्गलवाद्यौर्वीणावेशुमृदङ्गभेरी\-पटह\-शङ्ख\-काहल\-गोमुख\-प्रभृतिभिः सुनादैः समस्तभूभटतां मध्ये सकललोकरक्षार्थं यथोचितमभिषिक्तो दाशरथिः कोसलेन्द्रो रघुकुलतिलको जानकीप्रियो भ्रातृत्रयप्रियःसिंहासनगत एकादसाब्दसहस्रं राज्यमकरोत्॥९९॥
 
 भरतोपि गन्धर्वविषयसाधनाय गच्छन् सङ्ग्रामे गन्धर्वकोटीस्तिस्त्रो जघान॥१००॥
 
 शत्रुघ्नेनाप्यमितबलपराक्रमो मधुपुत्रो लवणो नाम राभसो निहातो मथुरा च निवेशिता॥१०१॥
 
-इत्येवमाद्यतिबलपराक्रमविक्रमणेरदितुष्टसंहारिणोशेषस्य जगतो निष्पादितस्थितयो रामलक्षमण
-भरतशत्रुघ्नाः पुनरपि दिवमारूढाः॥१०२॥
+इत्येवमाद्यतिबलपराक्रमविक्रमणेरदितुष्टसंहारिणोशेषस्य जगतो निष्पादितस्थितयो रामलक्षमण भरतशत्रुघ्नाः पुनरपि दिवमारूढाः॥१०२॥
 
 येऽपि तेषु भगवदंशेष्वनुरागिणः कोसलनगरजानपदास्तेपि तन्मनसस्तत्सालोक्यता मवापुः॥१०३॥
 
-अतिदुष्टसंहारिणो रामस्य कुशलवो द्वौ पुत्रौ लक्ष्मणस्याङ्गदचन्द्रकेतू तक्षपुष्कलौ भरतस्य
-सुबाहुशुरसेनौ शत्रुघ्नस्य॥१०४॥
+अतिदुष्टसंहारिणो रामस्य कुशलवो द्वौ पुत्रौ लक्ष्मणस्याङ्गदचन्द्रकेतू तक्षपुष्कलौ भरतस्य सुबाहुशुरसेनौ शत्रुघ्नस्य॥१०४॥
 
 कुशस्यातिथिरतिथेरपि निषधः पुत्रोऽभूत्॥१०५॥
 
-निषधस्याप्यनलस्तस्मादपि नभः नभसः पुण्डरीकस्तत्तनयः क्षेमधन्वा तस्य च
-देवानीकस्तस्याप्यहीनकोऽहीनकस्यापि रुरुस्तस्य च पारियात्रकः पारियात्राद्देवलो
-देवलाद्वच्चलः तस्याप्युत्कः उत्काच्च वज्रनाभस्त स्माच्छङ्खणस्तमाद्युषितास्वस्ततश्च विश्वसहो
-जज्ञे॥१०६॥
+निषधस्याप्यनलस्तस्मादपि नभः नभसः पुण्डरीकस्तत्तनयः क्षेमधन्वा तस्य च देवानीकस्तस्याप्यहीनकोऽहीनकस्यापि रुरुस्तस्य च पारियात्रकः पारियात्राद्देवलो देवलाद्वच्चलः तस्याप्युत्कः उत्काच्च वज्रनाभस्त स्माच्छङ्खणस्तमाद्युषितास्वस्ततश्च विश्वसहो जज्ञे॥१०६॥
 
 तस्माद्धिरण्यनाभः यो महायोगीस्वराज्जैमिनेः शष्याद्याज्ञवःक्याद्योगमवाय॥१०७॥
 
-हिरण्यनाभस्य पुत्रः पुष्यस्तस्माद्ध्रुवसन्धिस्ततःसुदर्शनस्तस्मादग्निवर्मस्ततः शीघ्रगस्तस्मादपि
-मरुः पुत्रोऽभवत्॥१०८॥
+हिरण्यनाभस्य पुत्रः पुष्यस्तस्माद्ध्रुवसन्धिस्ततःसुदर्शनस्तस्मादग्निवर्मस्ततः शीघ्रगस्तस्मादपि मरुः पुत्रोऽभवत्॥१०८॥
 
 योसौ योगमास्थायाद्यापि कलापग्राममश्रित्य तिष्ठति॥१०९॥
 
 आगामियुगे सूर्यशक्षत्रव्रत आवर्तयिता भविष्यति॥११०॥
 
-तस्यात्मजः प्रशुश्रुकस्तस्यपि सुसन्धिस्ततश्चाप्यमर्षस्तस्य च सहस्वांस्ततश्च विश्वभवः॥१११
-॥
+तस्यात्मजः प्रशुश्रुकस्तस्यपि सुसन्धिस्ततश्चाप्यमर्षस्तस्य च सहस्वांस्ततश्च विश्वभवः॥१११॥
 
 तस्य बृहद्बलः योर्जुनतनयेनाभिमन्युनाभारतयुद्धे क्षयमनीयत॥११२॥
 
-एते इक्ष्वाकुभूपालाः प्राधान्येन मयेरिताः ।
-
+एते इक्ष्वाकुभूपालाः प्राधान्येन मयेरिताः।\\
 एतेषां चरितं शृण्वन् सर्वपापैः प्रमुच्यते॥११३॥
 
-इति श्रीविष्णुमहापुराणे चतुर्थंशे चतुर्थोऽध्यायः (४)
+\end{flushleft}
+
+॥इति श्रीविष्णुमहापुराणे चतुर्थंशे चतुर्थोऽध्यायः॥४॥
