--- a/mulam/skanda-puranam/vamanena-ramavatara-kathanam.tex
+++ b/mulam/skanda-puranam/vamanena-ramavatara-kathanam.tex
@@ -1,14 +1,16 @@
-\sect{अष्टादशोऽध्यायः --- बलिनिग्रहवृत्तान्तवर्णनम्}
+\sect{अष्टादशोऽध्यायः --- बलिनिग्रहवृत्तान्तवर्णने रामावतारवर्णनम्}
 
 \src{स्कन्दपुराणम्}{खण्डः ७ (प्रभासखण्डः)}{वस्त्रापथक्षेत्रमाहात्म्यम्}{अध्यायः १८}
 \vakta{वामनः}
 \shrota{नारदः}
 \tags{}
-\notes{}
+\notes{Vāmana Bhagavān narrates the context/story of different avatāras to Nārada.}
 \textlink{https://sa.wikisource.org/wiki/स्कन्दपुराणम्/खण्डः_७_(प्रभासखण्डः)/वस्त्रापथक्षेत्रमाहात्म्यम्/अध्यायः_१८}
 \translink{https://www.wisdomlib.org/hinduism/book/the-skanda-purana/d/doc627173.html}
 
 \storymeta
+
+\addtocounter{shlokacount}{180}
 
 \twolineshloka
 {लङ्कायां रावणो राज्यं करिष्यति महाबलः}
@@ -55,3 +57,5 @@
 {यास्येऽहं भ्रातृभिः सार्धं राज्यं पुत्रे निवेद्य च}%॥ १९१ ॥
 
 ॥इति श्रीस्कान्दे महापुराण एकाशीतिसाहस्र्यां संहितायां सप्तमे प्रभासखण्डे द्वितीये वस्त्रापथक्षेत्रमाहात्म्ये बलिनिग्रहवृत्तान्तवर्णनं नामाष्टादशोऽध्यायः॥१८॥
+
+\closesection
