--- a/mulam/skanda-puranam/hatakeshvara-mahatmyam.tex
+++ b/mulam/skanda-puranam/hatakeshvara-mahatmyam.tex
@@ -223,7 +223,7 @@
 
 ॥इति श्रीस्कान्दे महापुराण एकाशीतिसाहस्र्यां संहितायां षष्ठे नागरखण्डे हाटकेश्वरक्षेत्रमाहात्म्ये रामेश्वरस्थापनप्रस्तावे श्रीरामम्प्रति दुर्वासः समागमनवृत्तान्तवर्णनं नामैकोनशततमोऽध्यायः॥९९॥
 
-\dnsub{शततमोऽध्यायः --- श्रीरामेश्वरस्थापन प्रस्तावे लक्ष्मणनिर्वाणोत्तरं श्रीरामस्य सुग्रीवनगरीं प्रति गमनवर्णनम्}\resetShloka
+\dnsub{शततमोऽध्यायः --- श्रीरामेश्वरस्थापनप्रस्तावे\\लक्ष्मणनिर्वाणोत्तरं श्रीरामस्य सुग्रीवनगरीं प्रति गमनवर्णनम्}\resetShloka
 
 \uvacha{सूत उवाच}
 
@@ -528,9 +528,9 @@
 {प्रधानामात्ययुक्तेन त्वयापि कपिसत्तम}
 {आगन्तव्यं मया सार्धं विभीषणगृहं प्रति}%॥ ७२ ॥
 
-॥इति श्रीस्कान्दे महापुराण एकाशीतिसाहस्र्यां संहितायां षष्ठे नागरखण्डे हाटकेश्वरक्षेत्रमाहात्म्ये श्रीरामेश्वरस्थापन प्रस्तावे लक्ष्मणनिर्वाणोत्तरं श्रीरामस्य सुग्रीवनगरीं प्रति गमनवर्णनं नाम शततमोऽध्यायः॥१००॥
+॥इति श्रीस्कान्दे महापुराण एकाशीतिसाहस्र्यां संहितायां षष्ठे नागरखण्डे हाटकेश्वरक्षेत्रमाहात्म्ये श्रीरामेश्वरस्थापनप्रस्तावे लक्ष्मणनिर्वाणोत्तरं श्रीरामस्य सुग्रीवनगरीं प्रति गमनवर्णनं नाम शततमोऽध्यायः॥१००॥
 
-\dnsub{एकोत्तरशततमोऽध्यायः --- सेतुमध्ये श्रीरामकृतरामेश्वरप्रतिष्ठावर्णनम्}\resetShloka
+\dnsub{एकोत्तरशततमोऽध्यायः --- सेतुमध्ये\\श्रीरामकृतरामेश्वरप्रतिष्ठावर्णनम्}\resetShloka
 
 \uvacha{सूत उवाच}
 
