--- a/mulam/shiva-puranam/rameshvara-mahatmyam.tex
+++ b/mulam/shiva-puranam/rameshvara-mahatmyam.tex
@@ -5,8 +5,8 @@
 \src{शिव-पुराणम्}{पूर्वखण्डः}{अध्यायः ३१}{श्लोकाः १---४५}
 \tags{concise, complete}
 \notes{Summary of Ramayana.}
-\textlink{}
-\translink{}
+\textlink{https://sa.wikisource.org/wiki/शिवपुराणम्/संहिता_४_(कोटिरुद्रसंहिता)/अध्यायः_३१}
+\translink{https://www.wisdomlib.org/hinduism/book/shiva-purana-english/d/doc226532.html}
 
 \storymeta
 
