--- a/mulam/shloka.sty
+++ b/mulam/shloka.sty
@@ -430,13 +430,11 @@
 \fi}
 
 \newcommand{\sect}[1]{%
-%\section[#1]{\fontspec[FakeBold=1.0,FakeStretch=1.0,Script=Devanagari,Mapping=tex-text]{Siddhanta}॥#1॥}%
 \section[#1]{\fontspec[FakeBold=1.0,FakeStretch=1.0,Script=Devanagari,Mapping=tex-text]{Sanskrit 2003}॥#1॥}%
 }
 
 \newcommand{\chapt}[1]{%
-%\chapter[#1]{\fontspec[FakeBold=1.0,FakeStretch=1.0,Script=Devanagari,Mapping=tex-text]{Siddhanta}॥#1॥}%
-\chapter[#1]{\fontspec[FakeBold=1.0,FakeStretch=1.0,Script=Devanagari,Mapping=tex-text]{Adobe Devanagari}#1}%
+\chapter[#1]{\fontspec[FakeBold=1.0,Scale=1.25,FakeStretch=1.0,Script=Devanagari,Mapping=tex-text]{Siddhanta}{#1}}%
 }
 
 \let\origclearpage\clearpage
