--- a/katha/vishnudharmottara-puranam/bharata-prasthana.tex
+++ b/katha/vishnudharmottara-puranam/bharata-prasthana.tex
@@ -3,12 +3,12 @@
 \src{विष्णुधर्मोत्तर-पुराणम्}{प्रथमखण्डः}{अध्यायः २०२}{}
 \tags{concise, complete}
 \notes{Bharata is sent by Rāma with a vast army to drive out the Gandharvas from Yudhājit’s lands. He marches in splendour, crossing sacred rivers and reaching the rich city of Takṣaśilā. After a fierce battle, the Gandharvas are defeated, Yudhājit’s sons are crowned, and Bharata returns to Ayodhyā in triumph.}
-\textlink{}
+\textlink{https://sa.wikisource.org/wiki/विष्णुधर्मोत्तरपुराणम्/_खण्डः_१/अध्यायाः_२०१-२०५}
 \translink{}
 
 \storymeta
 
-\sect{भरतप्रस्थानवर्णनम् --- द्व्यधिकद्विशततमोऽध्यायः}
+\sect{भरतप्रस्थानवर्णनम्}
 
 \uvacha{वज्र उवाच}
 
@@ -156,7 +156,7 @@
 
 ॥इति श्रीविष्णुधर्मोत्तरे प्रथमखण्डे मार्कण्डेयवज्रसंवादे भरतप्रस्थानवर्णनं नाम द्व्यधिकद्विशततमोऽध्यायः॥२०२॥
 
-\sect{आनुयात्रिकवर्णनम् --- त्र्यधिकद्विशततमोऽध्यायः}
+\sect{आनुयात्रिकवर्णनम्}
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -254,7 +254,7 @@
 
 ॥इति श्रीविष्णुधर्मोत्तरे प्रथमखण्डे मार्कण्डेयवज्रसंवादे आनुयात्रिकवर्णनन्नाम त्र्यधिकद्विशततमोऽध्यायः॥२०३॥
 
-\sect{भरतनिर्याणवर्णनम् --- चतुरधिकद्विशततमोऽध्यायः}
+\sect{भरतनिर्याणवर्णनम्}
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -466,7 +466,7 @@
 
 ॥इति श्रीविष्णुधर्मोत्तरे प्रथमखण्डे मार्कण्डेयवज्रसंवादे भरतनिर्याणवर्णनं नाम चतुरधिकद्विशततमोऽध्यायः॥२०४॥
 
-\sect{प्रयाणवर्णनम् --- पञ्चाधिकद्विशततमोऽध्यायः}
+\sect{प्रयाणवर्णनम्}
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -737,7 +737,7 @@
 
 ॥इति श्रीविष्णुधर्मोत्तरे प्रथमखण्डे मार्कण्डेयवज्रसंवादे प्रयाणवर्णनं नाम पञ्चाधिकद्विशततमोऽध्यायः॥२०५॥
 
-\sect{गङ्गावतरण वर्णनम् --- षडुत्तरद्विशततमोऽध्यायः}
+\sect{गङ्गावतरण वर्णनम्}
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -901,7 +901,7 @@
 
 ॥इति श्रीविष्णुधर्मोत्तरे प्रथमखण्डे मार्कण्डेयवज्रसंवादे गङ्गावतरणवर्णनं नाम षडुत्तरद्विशततमोऽध्यायः॥२०६॥
 
-\sect{राजगृहगमनो --- सप्तोत्तरद्विशततमोऽध्यायः}
+\sect{राजगृहगमनो}
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -1220,7 +1220,7 @@
 
 ॥इति श्रीविष्णुधर्मोत्तरे प्रथमखण्डे मार्कण्डेयवज्रसंवादे राजगृहगमनो नाम सप्तोत्तरद्विशततमोऽध्यायः॥२०७॥
 
-\sect{भरतस्य राजगृहप्रवेशवर्णनम् --- अष्टोत्तरद्विशततमोऽध्यायः}
+\sect{भरतस्य राजगृहप्रवेशवर्णनम्}
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -1328,7 +1328,7 @@
 
 ॥इति श्रीविष्णुधर्मोत्तरे प्रथमखण्डे मार्कण्डेयवज्रसंवादे भरतस्य राजगृहप्रवेशवर्णनं नामाष्टोत्तरद्विशततमोऽध्यायः॥२०८॥
 
-\sect{युद्धप्रसङ्गवर्णनम् --- नवोत्तरद्विशततमोऽध्यायः}
+\sect{युद्धप्रसङ्गवर्णनम्}
 
 \uvacha{मार्कण्डेय उवाच}
 
