--- a/rama-charitam/narayaniyam/dashakam-34.tex
+++ b/rama-charitam/narayaniyam/dashakam-34.tex
@@ -1,6 +1,6 @@
 \chapt{श्रीमन्नारायणीयम्}
 
-\sect{दशकं ३४ --- श्रीरामचरितवर्णनम्}
+\sect{श्रीरामचरितवर्णनम् - १}
 
 \src{श्रीमन्नारायणीयम्}{चतुस्त्रिंश-दशकं}{}{श्लोकाः १--१०}
 \vakta{शुकः}
