--- a/rama-charitam/narayaniyam/dashakam-35.tex
+++ b/rama-charitam/narayaniyam/dashakam-35.tex
@@ -1,4 +1,4 @@
-\sect{दशकं ३५ --- श्रीरामचरितवर्णनम्}
+\sect{श्रीरामचरितवर्णनम् - २}
 
 \src{श्रीमन्नारायणीयम्}{पञ्चत्रिंश-दशकं}{}{श्लोकाः १--१०}
 \vakta{शुकः}
