--- a/ramayana-ratnakara-mulam.tex
+++ b/ramayana-ratnakara-mulam.tex
@@ -97,6 +97,9 @@
     \input{katha/skanda-puranam/dasharatheshvara-mahatmyam}
 
     \part{रामायणान्तर्गत-स्तोत्राणि}
+    \input{stotram/NamaRamayanam}
+    \chapt{वाल्मीकि-रामायणम्}
+    \input{stotram/valmiki-ramayanam/BrahmaKrtaRamaStava.tex}
     \chapt{स्कन्द-पुराणम्}
     \input{stotram/skanda-puranam/rama-stotram.tex}
 
@@ -105,9 +108,10 @@
     \part{अनुबन्धाः}
     \begingroup
     \let\chapt\sect
-    \input{stotram/NamaRamayanam}
+    \chapt{ध्यान-मङ्गल-श्लोकाः}
     \input{anubandha/valmiki-ramayanam/RamayanaDhyanam}
     \input{anubandha/valmiki-ramayanam/RamayanaMangalaShloka}
+    \chapt{नामवल्यः}
     \input{../namavali-manjari/100/Rama_108}
     \input{../namavali-manjari/100/Sita_108}
     \input{../namavali-manjari/100/Anjaneya_108}
