--- a/rama-charitam/agni-puranam/ramavatara-varnanam.tex
+++ b/rama-charitam/agni-puranam/ramavatara-varnanam.tex
@@ -1,15 +1,15 @@
 \chapt{अग्नि-पुराणम्}
 
-\src{अग्निपुराणम्}{अध्यायः ५}{}{श्लोकाः १--१४}
-\vakta{}
-\shrota{}
-\notes{}
+\src{अग्निपुराणम्}{अध्यायः ५--११}{}{}
+\vakta{नारदः}
+\shrota{अग्निः}
+\notes{In 7 chapters, each of the Kandas of the Ramayana is described in brief.}
 \textlink{https://sa.wikisource.org/wiki/अग्निपुराणम्/अध्यायः_५}
-\translink{}
+\translink{https://www.wisdomlib.org/hinduism/book/the-agni-purana/d/doc1083093.html}
 
 \storymeta
 
-\sect{पञ्चमोऽध्यायः --- बाल-काण्ड-वर्णनम्}
+\sect{बाल-काण्ड-वर्णनम्}
 
 \uvacha{अग्निरुवाच}
 \twolineshloka
@@ -73,7 +73,7 @@
 ॥इत्यादिमहापुराणे आग्नेये रामायणे बालकाण्डवर्णनं नाम पञ्चमोऽध्यायः॥
 
 
-\sect{षष्ठोऽध्यायः --- अयोध्या-काण्ड-वर्णनम्}
+\sect{अयोध्या-काण्ड-वर्णनम्}
 
 \uvacha{नारद उवाच}
 
@@ -277,7 +277,7 @@
 ॥इत्यादिमहापुराणे आग्नेये रामायणेऽयोध्याकाण्डवर्णनं नाम षष्ठोऽध्यायः॥
 
 
-\sect{सप्तमोऽध्यायः --- अरण्य-काण्ड-वर्णनम्}
+\sect{अरण्य-काण्ड-वर्णनम्}
 
 \uvacha{नारद उवाच}
 \twolineshloka
@@ -372,7 +372,7 @@
 ॥इत्यादिमहापुराणे अग्नेये रामायणे अरण्यकाण्डवर्णनं नाम सप्तमोऽध्यायः॥
 
 
-\sect{अष्टमोऽध्यायः --- किष्किन्धा-काण्ड-वर्णनम्}
+\sect{किष्किन्धा-काण्ड-वर्णनम्}
 
 \uvacha{नारद उवाच}
 
@@ -443,7 +443,7 @@
 
 ॥इत्यादिमहापुराणे आग्नेये रामायणे किष्किन्धाकाण्डर्णनं नाम अष्टमोऽध्यायः॥
 
-\sect{नवमोऽध्यायः --- सुन्दरकाण्ड-वर्णनम्}
+\sect{सुन्दरकाण्ड-वर्णनम्}
 
 \uvacha{नारद उवाच}
 \twolineshloka
@@ -573,7 +573,7 @@
 
 ॥इत्यादिमहापुराणे आग्नये रामायणे सुन्दरकाण्डवर्णनं नाम नवमोऽध्यायः॥
 
-\sect{अष्टमोऽध्यायः --- युद्ध-काण्ड-वर्णनम्}
+\sect{युद्ध-काण्ड-वर्णनम्}
 
 \uvacha{नारद उवाच}
 \twolineshloka
@@ -715,7 +715,7 @@
 
 इत्यादिमहापुराणे आग्नेये रामायणे युद्धकाण्डवर्णनं नाम दशमोऽध्यायः ॥
 
-\sect{एकादशोऽध्यायः --- उत्तर-काण्ड-वर्णनम्}
+\sect{उत्तर-काण्ड-वर्णनम्}
 
 \uvacha{नारद उवाच}
 
