--- a/ramayana-ratnakara-mulam.tex
+++ b/ramayana-ratnakara-mulam.tex
@@ -30,26 +30,26 @@
 % \Large
 \begin{center}
     \part{राम-चरितानि}
-    \input{rama-charitam/valmiki-ramayanam/SankshepaRamayanam}
-    \input{rama-charitam/valmiki-ramayanam/KavyaSankshepa}
-    \input{rama-charitam/valmiki-ramayanam/RamavrttaSamshrava}
-    \input{rama-charitam/valmiki-ramayanam/HanumajjanakiSamvada}
+    \input{rama-charitam/valmiki-ramayanam/sankshepa-ramayanam}
+    \input{rama-charitam/valmiki-ramayanam/kavya-sankshepa}
+    \input{rama-charitam/valmiki-ramayanam/ramavrtta-samshrava}
+    \input{rama-charitam/valmiki-ramayanam/hanumajjanaki-samvada}
     \input{rama-charitam/valmiki-ramayanam/Hanumadupadesha}
-    \input{rama-charitam/valmiki-ramayanam/HanumadBharataSambhashanam}
-    \input{rama-charitam/valmiki-ramayanam/GayatriRamayanam}
-    \input{rama-charitam/adhyatma-ramayanam/RamaHrdayam}
-    \input{rama-charitam/adhyatma-ramayanam/HanumatSitaSamvada}
+    \input{rama-charitam/valmiki-ramayanam/hanumad-bharata-sambhashanam}
+    \input{rama-charitam/valmiki-ramayanam/gayatri-ramayanam}
+    \input{rama-charitam/adhyatma-ramayanam/rama-hrdayam}
+    \input{rama-charitam/adhyatma-ramayanam/hanumat-sita-samvada}
     \input{rama-charitam/bhagavatam/bhagavatam-09-10}
     \input{rama-charitam/bhagavatam/bhagavatam-09-11}
     \input{rama-charitam/narayaniyam/dashakam-34}
     \input{rama-charitam/narayaniyam/dashakam-35}
-    \input{rama-charitam/mahabharatam/RamaAvatara}
+    \input{rama-charitam/mahabharatam/rama-avatara}
     \input{rama-charitam/mahabharatam/ramopakhyanaparva}
-    \input{rama-charitam/mahabharatam/HanumadBhimaSamvada}
-    \input{rama-charitam/mahabharatam/NaradaSrinjayaSamvada}
-    \input{rama-charitam/devi-bhagavatam/RamacharitaVarnanam}
-    \input{rama-charitam/devi-bhagavatam/LakshmanaKrtaRamaShokaSantvanam}
-    \input{rama-charitam/devi-bhagavatam/RamayaDeviVaradanam}
+    \input{rama-charitam/mahabharatam/hanumad-bhima-samvada}
+    \input{rama-charitam/mahabharatam/narada-srinjaya-samvada}
+    \input{rama-charitam/devi-bhagavatam/ramacharita-varnanam}
+    \input{rama-charitam/devi-bhagavatam/lakshmana-krta-rama-shoka-santvanam}
+    \input{rama-charitam/devi-bhagavatam/ramaya-devi-varadanam}
     \input{rama-charitam/agni-puranam/ramavatara-varnanam}
     \input{rama-charitam/kurma-puranam/ikshvaku-vamsha-varnanam}
     \input{rama-charitam/garuda-puranam/ramayana-varnanam}
@@ -71,7 +71,7 @@
     \input{rama-charitam/naradiya-puranam/lakshmanachala-mahatmayam}
     
     \part{रामायणान्तर्गताः कथाः}
-    \input{katha/devi-bhagavatam/VedavatiCharitram}
+    \input{katha/devi-bhagavatam/vedavati-charitram}
     \input{katha/naradiya-puranam/hanumaccharitram}
     \input{katha/brahma-puranam/rama-tirtha}
     \input{katha/brahma-puranam/sahasra-kunda-tirtha}
@@ -97,9 +97,9 @@
     \input{katha/skanda-puranam/dasharatheshvara-mahatmyam}
 
     \part{रामायणान्तर्गत-स्तोत्राणि}
-    \input{stotram/NamaRamayanam}
+    \input{stotram/nama-ramayanam}
     \chapt{वाल्मीकि-रामायणम्}
-    \input{stotram/valmiki-ramayanam/BrahmaKrtaRamaStava.tex}
+    \input{stotram/valmiki-ramayanam/brahma-krta-rama-stava}
     \chapt{स्कन्द-पुराणम्}
     \input{stotram/skanda-puranam/rama-stotram.tex}
 
@@ -107,10 +107,10 @@
     
     \part{अनुबन्धाः}
     \begingroup
-    \let\chapt\sect
     \chapt{ध्यान-मङ्गल-श्लोकाः}
-    \input{anubandha/valmiki-ramayanam/RamayanaDhyanam}
-    \input{anubandha/valmiki-ramayanam/RamayanaMangalaShloka}
+    \let\chapt\sect
+    \input{anubandha/valmiki-ramayanam/ramayana-dhyanam}
+    \input{anubandha/valmiki-ramayanam/ramayana-mangala-shloka}
     \chapt{नामवल्यः}
     \input{../namavali-manjari/100/Rama_108}
     \input{../namavali-manjari/100/Sita_108}
