removed adhyaya number from \sect

--- a/katha/skanda-puranam/hanumanteshvara-mahatmyam.tex
+++ b/katha/skanda-puranam/hanumanteshvara-mahatmyam.tex
@@ -1,4 +1,4 @@
-\sect{त्र्यशीतितमोऽध्यायः --- हनूमन्तेश्वरतीर्थमाहात्म्यवर्णनम्}
+\sect{हनूमन्तेश्वरतीर्थमाहात्म्यवर्णनम्}
 
 \src{स्कन्दपुराणम्}{खण्डः ५ (अवन्तीखण्डः)}{रेवा खण्डम्}{अध्यायः ०८३}
 \vakta{}
