--- a/katha/skanda-puranam/hanumatkeshvara-mahatmyam.tex
+++ b/katha/skanda-puranam/hanumatkeshvara-mahatmyam.tex
@@ -1,4 +1,4 @@
-\sect{एकोनाशीतितमोऽध्यायः --- हनुमत्केश्वरमाहात्म्यवर्णनम्}
+\sect{हनुमत्केश्वरमाहात्म्यवर्णनम्}
 
 \src{स्कन्दपुराणम्}{खण्डः ५ (अवन्तीखण्डः)}{अवन्तीस्थचतुरशीतिलिङ्गमाहात्म्यम्}{अध्यायः ७९}
 \vakta{}
