--- a/katha/skanda-puranam/hatakeshvara-mahatmyam.tex
+++ b/katha/skanda-puranam/hatakeshvara-mahatmyam.tex
@@ -1,4 +1,4 @@
-\sect{द्व्युत्तरशततमोऽध्यायः --- लक्ष्मणादिप्रासादपञ्चकनिर्माणप्रतिष्ठापनवर्णनम्}
+\sect{लक्ष्मणादिप्रासादपञ्चकनिर्माणप्रतिष्ठापनवर्णनम्}
 
 \src{स्कन्दपुराणम्}{खण्डः ६ (नागरखण्डः)}{}{अध्यायः ०९९}
 \vakta{}
