--- a/katha/skanda-puranam/lakshmaneshvara-mahatmyam.tex
+++ b/katha/skanda-puranam/lakshmaneshvara-mahatmyam.tex
@@ -1,4 +1,4 @@
-\sect{द्वादशोत्तरशततमोऽध्यायः --- लक्ष्मणेश्वरमाहात्म्यवर्णनम्}
+\sect{लक्ष्मणेश्वरमाहात्म्यवर्णनम्}
 
 \src{स्कन्दपुराणम्}{खण्डः ७ (प्रभासखण्डः)}{प्रभासक्षेत्र माहात्म्यम्}{अध्यायः ११२}
 \vakta{}
