--- a/katha/skanda-puranam/ramanatha-linga-pratishtha.tex
+++ b/katha/skanda-puranam/ramanatha-linga-pratishtha.tex
@@ -902,7 +902,7 @@
 {विमुञ्चन्नेत्रजं वारि वायुजं चाव्रवीद्द्विजाः}%॥ ९० ॥
 ॥इति श्रीस्कान्दे महापुराण एकाशीतिसाहस्र्यां संहितायां तृतीये ब्रह्मखण्डे सेतुमाहात्म्ये रामचन्द्रतत्त्वज्ञानोपदेशवर्णनं नाम पञ्चचत्वारिंशोऽध्यायः॥४५॥
 
-\sect{षट्चत्वारिंशोऽध्यायः --- रामनाथलिङ्गप्रतिष्ठाकारणवर्णनम्}
+\sect{रामनाथलिङ्गप्रतिष्ठाकारणवर्णनम्}
 
 \src{स्कन्दपुराणम्}{खण्डः ३ (ब्रह्मखण्डः)}{सेतुखण्डः}{अध्यायः ४६}
 \vakta{}
@@ -1255,7 +1255,7 @@
 ॥इति श्रीस्कान्दे महापुराण एकाशीतिसाहस्र्यां संहितायां तृतीये ब्रह्मखण्डे सेतुमाहात्म्ये रामनाथलिङ्गप्रतिष्ठाकारणवर्णनं नाम षट्चत्वारिंशोऽध्यायः॥४६॥
 
 
-\sect{सप्तचत्वारिंशोऽध्यायः --- रामस्य ब्रह्महत्योत्पत्तिहेतुनिरूपणम्}
+\sect{रामस्य ब्रह्महत्योत्पत्तिहेतुनिरूपणम्}
 
 \src{स्कन्दपुराणम्}{खण्डः ३ (ब्रह्मखण्डः)}{सेतुखण्डः}{अध्यायः ४७}
 \vakta{}
