--- a/katha/skanda-puranam/rameshvara-kshetra-mahatmyam.tex
+++ b/katha/skanda-puranam/rameshvara-kshetra-mahatmyam.tex
@@ -1,4 +1,4 @@
-\sect{एकादशोत्तरशततमोऽध्यायः --- रामेश्वरक्षेत्रमाहात्म्यवर्णनम्}
+\sect{रामेश्वरक्षेत्रमाहात्म्यवर्णनम्}
 
 \src{स्कन्दपुराणम्}{खण्डः ७ (प्रभासखण्डः)}{प्रभासक्षेत्र माहात्म्यम्}{अध्यायः १११}
 \vakta{}
