--- a/rama-charitam/garuda-puranam/ramayana-varnanam.tex
+++ b/rama-charitam/garuda-puranam/ramayana-varnanam.tex
@@ -1,6 +1,6 @@
 \chapt{गरुड-पुराणम्}
 
-\sect{त्रिचत्वारिंशदुत्तरशततमोऽध्यायः --- रामायणवर्णनम्}
+\sect{रामायणवर्णनम्}
 
 \src{गरुड-पुराणम्}{पूर्वखण्डः}{अध्यायः १४३}{श्लोकाः १---५१}
 \tags{concise, complete}
