--- a/rama-charitam/narasimha-puranam/rama-pradurbhava.tex
+++ b/rama-charitam/narasimha-puranam/rama-pradurbhava.tex
@@ -9,7 +9,7 @@
 
 \storymeta
 
-\sect{षडविंशोऽध्यायः --- सूर्यवंशानुचरितम्}
+\sect{सूर्यवंशानुचरितम्}
 
 \addtocounter{shlokacount}{8}
 
@@ -50,7 +50,7 @@
 \storymeta
 
 
-\sect{सप्तचत्वारिंशोऽध्यायः --- बाल-काण्डः}
+\sect{बाल-काण्डः}
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -709,7 +709,7 @@
 
 ॥इति श्रीनरसिंहपुराणे रामप्रादुर्भावे सप्तचत्वारिंशोऽध्यायः॥४७॥
 
-\sect{अष्टचत्वारिंशोऽध्यायः --- अयोध्या-काण्डः}
+\sect{अयोध्या-काण्डः}
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -1384,7 +1384,7 @@
 
 ॥इति श्रीनरसिंहपुराणे रामप्रादुर्भावे अष्टचत्वारिंशोऽध्यायः॥४८॥
 
-\sect{एकोनपञ्चाशोऽध्यायः --- अरण्य-काण्डः}
+\sect{अरण्य-काण्डः}
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -1954,7 +1954,7 @@
 
 ॥इति श्रीनरसिंहपुराणे रामप्रादुर्भावे एकोनपञ्चाशोऽध्यायः॥४९॥
 
-\sect{पञ्चाशत्तमोऽध्यायः --- किष्किन्धा-काण्डः}
+\sect{किष्किन्धा-काण्डः}
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -2632,7 +2632,7 @@
 
 ॥इति श्रीनरसिंहपुराणे रामप्रादुर्भावे पञ्चाशत्तमोऽध्यायः॥५०॥
 
-\sect{एकपञ्चाशत्तमोऽध्यायः --- सुन्दर-काण्डः}
+\sect{सुन्दर-काण्डः}
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -2877,7 +2877,7 @@
 
 ॥इति श्रीनरसिंहपुराणे रामप्रादुर्भावे एकपञ्चाशत्तमोऽध्यायः॥५१॥
 
-\sect{द्विपञ्चाशोऽध्यायः --- युद्ध-काण्डः}
+\sect{युद्ध-काण्डः}
 
 \uvacha{मार्कण्डेय उवाच}
 
