--- a/rama-charitam/padma-puranam/ramayana-varnanam.tex
+++ b/rama-charitam/padma-puranam/ramayana-varnanam.tex
@@ -1,4 +1,4 @@
-\sect{द्विचत्वारिंशदधिक-द्विशततमोऽध्यायः --- रामस्यायोध्याप्रवेशः}
+\sect{रामस्यायोध्याप्रवेशः}
 
 \src{पद्म-पुराणम्}{उत्तरखण्डः}{अध्यायः २४२--२४४}{}
 % \tags{concise, complete}
@@ -1589,7 +1589,7 @@
 
 {॥इति श्रीपाद्मे महापुराणे पञ्चपञ्चाशत्साहस्र्यां संहितायामुत्तरखण्डे उमामहेश्वरसंवाद रामस्यायोध्याप्रवेशो नाम द्विचत्वारिंशदधिकद्विशततमोऽध्यायः॥२४२॥}
 
-\sect{त्रिचत्वारिंशदधिक-द्विशततमोऽध्यायः --- विश्वदर्शनम्}
+\sect{विश्वदर्शनम्}
 
 \uvacha{शङ्कर उवाच}
 
@@ -1820,7 +1820,7 @@
 
 {॥इति श्रीपाद्मे महापुराणे पञ्चपञ्चाशत्साहस्र्यां संहितायामुत्तरखण्डे उमामहेश्वर संवादे विश्वदर्शनं नाम त्रिचत्वारिंशदधिकद्विशततमोऽध्यायः॥२४३॥}
 
-\sect{चतुश्चत्वारिंशदधिक-द्विशततमोऽध्यायः --- श्रीरामचरितकथनम्}
+\sect{श्रीरामचरितकथनम्}
 
 \uvacha{शङ्कर उवाच}
 
