--- a/rama-charitam/skanda-puranam/rama-charitram.tex
+++ b/rama-charitam/skanda-puranam/rama-charitram.tex
@@ -1,4 +1,4 @@
-\sect{त्रिंशोऽध्यायः --- रामचरित्रवर्णनम्}
+\sect{रामचरित्रवर्णनम्}
 
 \src{स्कन्दपुराणम्}{खण्डः ३ (ब्रह्मखण्डः)}{धर्मारण्य खण्डः}{अध्यायः ३०}
 \vakta{}
