--- a/rama-charitam/skanda-puranam/rama-katha-varnanam.tex
+++ b/rama-charitam/skanda-puranam/rama-katha-varnanam.tex
@@ -1,4 +1,4 @@
-\sect{अष्टमोऽध्यायः --- श्रीरामावतारकथावर्णनम्}
+\sect{श्रीरामावतारकथावर्णनम्}
 
 \src{स्कन्दपुराणम्}{खण्डः १ (माहेश्वरखण्डः)}{केदारखण्डः}{अध्यायः ०८}
 \vakta{}
