--- a/katha/skanda-puranam/dasharatheshvara-mahatmyam.tex
+++ b/katha/skanda-puranam/dasharatheshvara-mahatmyam.tex
@@ -1,4 +1,4 @@
-\sect{एकसप्तत्युत्तरशततमोऽध्यायः --- दशरथेश्वरमाहात्म्यवर्णनम्}
+\sect{दशरथेश्वरमाहात्म्यवर्णनम्}
 
 \src{स्कन्दपुराणम्}{खण्डः ७ (प्रभासखण्डः)}{प्रभासक्षेत्र माहात्म्यम्}{अध्यायः १७१}
 \vakta{}
