--- a/katha/skanda-puranam/janakiishvara-mahatmyam.tex
+++ b/katha/skanda-puranam/janakiishvara-mahatmyam.tex
@@ -1,4 +1,4 @@
-\sect{त्रयोदशोत्तरशततमोऽध्यायः --- जानकीश्वरमाहात्म्यवर्णनम्}
+\sect{जानकीश्वरमाहात्म्यवर्णनम्}
 
 \src{स्कन्दपुराणम्}{खण्डः ७ (प्रभासखण्डः)}{प्रभासक्षेत्र माहात्म्यम्}{अध्यायः ११३}
 \vakta{}
