--- a/rama-charitam/devi-bhagavatam/lakshmana-krta-rama-shoka-santvanam.tex
+++ b/rama-charitam/devi-bhagavatam/lakshmana-krta-rama-shoka-santvanam.tex
@@ -6,7 +6,7 @@
 \tags{concise, complete}
 \notes{This chapter describes how Sita rejected Ravana's advances and was forcibly abducted to Lanka despite Jatayu's heroic attempt to stop him, followed by Rama's discovery of Her disappearance and His profound grief, being consoled by Lakshman's encouraging words about the cyclical nature of fortune and Their ability to rescue Her with the help of Their vānara allies.}
 \textlink{https://sa.wikisource.org/wiki/देवीभागवतपुराणम्/स्कन्धः_०३/अध्यायः_२९}
-\translink{}
+\translink{https://www.wisdomlib.org/hinduism/book/devi-bhagavata-purana/d/doc57162.html}
 
 \storymeta
 
