--- a/rama-charitam/devi-bhagavatam/ramacharita-varnanam.tex
+++ b/rama-charitam/devi-bhagavatam/ramacharita-varnanam.tex
@@ -6,7 +6,7 @@
 \tags{concise, complete}
 \notes{This passage from the Devi Bhagavatam describes how Rama and Lakshmana accompanied sage Vishvamitra, killed demons including Tadaka, led to Rama winning Sita by breaking Shiva's bow, their exile to the forest due to Queen Kaikeyi's demands, and culminates with Ravana disguising himself to approach Sita while She was alone after tricking Rama and Lakshman away.}
 \textlink{https://sa.wikisource.org/wiki/देवीभागवतपुराणम्/स्कन्धः_०३/अध्यायः_२८}
-\translink{}
+\translink{https://www.wisdomlib.org/hinduism/book/devi-bhagavata-purana/d/doc57161.html}
 
 \storymeta
 
