--- a/rama-charitam/devi-bhagavatam/ramaya-devi-varadanam.tex
+++ b/rama-charitam/devi-bhagavatam/ramaya-devi-varadanam.tex
@@ -5,7 +5,7 @@
 \shrota{जनमेजयः}
 \notes{This passage describes how the sage Narada appeared to console the grieving Rama, revealed that Sita's abduction was destined for Ravana's destruction, instructed Rama to perform the nine-day Devi worship (Navaratri) in the month of Ashvin, during which the Goddess appeared and blessed Rama with the assurance that he would defeat Ravana with the help of the vānaras, after which Rama successfully built the bridge across the ocean and killed Ravana.}
 \textlink{https://sa.wikisource.org/wiki/देवीभागवतपुराणम्/स्कन्धः_०३/अध्यायः_३०}
-\translink{}
+\translink{https://www.wisdomlib.org/hinduism/book/devi-bhagavata-purana/d/doc57163.html}
 
 \storymeta
 
