--- a/rama-charitam/harivamsha/ramakatha.tex
+++ b/rama-charitam/harivamsha/ramakatha.tex
@@ -1,10 +1,9 @@
 \chapt{हरिवंशः}
 
-\src{हरिवंशः}{}{}{}
-\tags{concise, complete}
-\notes{}
-\textlink{}
-\translink{}
+\src{हरिवंशः}{हरिवंशपर्व}{अध्यायः ४१}{श्लोकाः १२१--१५५}
+\notes{This chapter is part of the Harivamsha Purana, which is a supplement to the Mahabharata. Along with the rest of the avataras, this extract from the 41st chapter narrates the life and exploits of Bhagavān Rāma.}
+\textlink{https://sa.wikisource.org/wiki/हरिवंशपुराणम्/पर्व_१_(हरिवंशपर्व)/अध्यायः_४१}
+\translink{https://www.wisdomlib.org/hinduism/book/harivamsha-purana-dutt/d/doc485519.html}
 
 \storymeta
 
@@ -156,5 +155,10 @@
 \twolineshloka
 {एवमेष महाबाहुरिक्ष्वाकुकुलनन्दनः}
 {रावणं सगणं हत्वा दिवमाचक्रमे प्रभुः}%।। १५५।।
+
+\ldots
+
+॥इति श्रीमहाभारते खिलभागे हरिवंशे हरिवंशपर्वणि प्रादुर्भावानुसंग्रहो नामैकचत्वारिंशोऽध्यायः॥४१॥
+
 
 \closesection
