--- a/rama-charitam/skanda-puranam/vamanena-ramavatara-kathanam.tex
+++ b/rama-charitam/skanda-puranam/vamanena-ramavatara-kathanam.tex
@@ -1,4 +1,4 @@
-\sect{अष्टादशोऽध्यायः --- बलिनिग्रहवृत्तान्तवर्णने रामावतारवर्णनम्}
+\sect{बलिनिग्रहवृत्तान्तवर्णने रामावतारवर्णनम्}
 
 \src{स्कन्दपुराणम्}{खण्डः ७ (प्रभासखण्डः)}{वस्त्रापथक्षेत्रमाहात्म्यम्}{अध्यायः १८}
 \vakta{वामनः}
