--- a/ramayana-ratnakara-mulam.tex
+++ b/ramayana-ratnakara-mulam.tex
@@ -108,10 +108,14 @@
     \part{अनुबन्धाः}
     \begingroup
     \chapt{ध्यान-मङ्गल-श्लोकाः}
-    \let\chapt\sect
+    \sect{वाल्मीकि-रामायणम्}
     \input{anubandha/valmiki-ramayanam/ramayana-dhyanam}
     \input{anubandha/valmiki-ramayanam/ramayana-mangala-shloka}
-    \chapt{नामवल्यः}
+    \sect{वराह-पुराणम्}
+    \input{anubandha/varaha-puranam/varaha-puranam-dhyanam.tex}
+    \closesection
+    \chapt{नामावल्यः}
+    \let\chapt\sect
     \input{../namavali-manjari/100/Rama_108}
     \input{../namavali-manjari/100/Sita_108}
     \input{../namavali-manjari/100/Anjaneya_108}
