--- a/rama-charitam/narasimha-puranam/rama-pradurbhava.tex
+++ b/rama-charitam/narasimha-puranam/rama-pradurbhava.tex
@@ -15,35 +15,34 @@
 
 \uvacha{सूत उवाच}
 
-दीर्घबाहोरजोऽजाद्दशरथः। तस्य गृहे रावणविनाशार्थं साक्षान्नारायणोऽवतीर्णो रामः॥९॥
-
-स तु पितृवचनाद भ्रातृभार्यासहितो दण्डकारण्यं प्राप्य तपश्चचार।
-
-वने रावणापहतभार्यो भ्रात्रा सह दुःखितोऽनेककोटिवानरनायक सुग्रीवसहायो मदोदधौ
-
-सेतुं निबध्य तैर्गत्वा लङ्कां रावणं देवकण्टकं सबान्धवं हत्वा सीतामादाय पुनरयोध्यां
-
-प्राप्य भरताभिषिक्तो विभीषणाय लङ्काराज्यं विमानं वा दत्त्वा तं प्रेषयामास।
-
-स तु परमेश्वरो विमानस्थो विभीषणेन नीयमानो लङ्कायामपि राक्षसपुर्यां वस्तुमनिच्छन् पुण्यारण्यं तत्र स्थापितवान्॥१०॥
-
-तन्निरीक्ष्य तत्रैव महाहिभोगशयने भगवान् शेते। सोऽपि विभीषणस्ततस्तद्विमानं नेतुमसमर्थः, तद्वचनात् स्वां पुरीं जगाम॥११॥
-
-नारायणसन्निधानान्महद्वैष्णवं क्षेत्रमभवदद्यापि दृश्यते। रामाल्लवो लवात्पद्यः पद्मादृतुपर्ण ऋतुपर्णादस्त्रपाणिः।
-
-अस्त्रपाणेः शुद्धोदनः शुद्धोदनाद्वुधः। बुधाद्वंशो निवर्तते॥१२॥
-
+\begin{flushleft}
+    
+    दीर्घबाहोरजोऽजाद्दशरथः।\\तस्य गृहे रावणविनाशार्थं साक्षान्नारायणोऽवतीर्णो रामः॥९॥
+    
+    स तु पितृवचनाद् भ्रातृभार्यासहितो दण्डकारण्यं प्राप्य तपश्चचार।\\    
+    वने रावणापहतभार्यो भ्रात्रा सह दुःखितोऽनेककोटिवानरनायक सुग्रीवसहायो मदोदधौ सेतुं निबध्य तैर्गत्वा लङ्कां रावणं देवकण्टकं सबान्धवं हत्वा सीतामादाय पुनरयोध्यां प्राप्य भरताभिषिक्तो विभीषणाय लङ्काराज्यं विमानं वा दत्त्वा तं प्रेषयामास।\\    
+    स तु परमेश्वरो विमानस्थो विभीषणेन नीयमानो लङ्कायामपि राक्षसपुर्यां वस्तुमनिच्छन् पुण्यारण्यं तत्र स्थापितवान्॥१०॥
+    
+    तन्निरीक्ष्य तत्रैव महाहिभोगशयने भगवान् शेते।\\
+    सोऽपि विभीषणस्ततस्तद्विमानं नेतुमसमर्थः, तद्वचनात् स्वां पुरीं जगाम॥११॥
+    
+    नारायणसन्निधानान्महद्वैष्णवं क्षेत्रमभवदद्यापि दृश्यते।\\
+    रामाल्लवो लवात्पद्यः पद्मादृतुपर्ण ऋतुपर्णादस्त्रपाणिः।\\
+    अस्त्रपाणेः शुद्धोदनः शुद्धोदनाद्बुधः। बुधाद्वंशो निवर्तते॥१२॥
+\end{flushleft}
+\addtocounter{shlokacount}{4}
 \twolineshloka
 {एते महीपा रविवंशजास्तव प्राधान्यतस्ते कथिता महाबलाः}
 {पुरातनैर्यैर्वसुधा प्रपालिता यज्ञक्रियाभिश्च दिवौकसैर्नृपैः} % ॥१३॥
 
 ॥इति श्रीनरसिंहपुराणे सूर्यवंशानुचरितं नाम षडविंशोऽध्यायः ॥२६॥
 
+\newpage
 
 \src{नरसिंह-पुराणम्}{अध्यायः ४७--५२}{}{}
 \vakta{}
 \shrota{}
-\notes{Concise retelling of all the Kandas of Ramayana.}
+\notes{Concise retelling of all the Kāṇḍas (from Bāla to Yuddha Kāṇḍa) of Ramayana.}
 \textlink{https://archive.org/details/narasimha-purana-english/page/171/mode/2up}
 \translink{https://archive.org/details/narasimha-purana-english/page/171/mode/2up}
 
